--- a/style.css
+++ b/style.css
@@ -1,25 +1,70 @@
-@font-face {
-  font-family: 'PTSerif-Regular';
-  src: url('fonts/PTSerif-Regular.ttf');
-}
-  @font-face{
-  font-family: 'Roboto-Regular';
-  src: url('fonts/Roboto-Regular.ttf');
+.wrapper{
+  width: 80%;
+  margin: auto;
 }
 .logo{
-  font-family: 'PTSerif-Regular';
-  font-weight: bold;
+  font: bold 24px/31px 'PTSerif-Regular',arial,helvetica,sans-serif;
+  padding: 40px 0;
+  padding-left: 44px;
+  position: relative;
 }
-.title{
+.logo__circle{
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.logo__circle_color_blue{
+  left: 8px;
+  top:56%;
+  background: #C8DBFB;
+  border-radius: 50%;
+  opacity: .7;
+}
+
+.logo__circle_color_dark-blue{
+background: #0056EC;
+border-radius: 50%;
+opacity: .7;
+}
+.header{
+  padding: 40px 0;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-content__title{
   font-family: 'Roboto-Regular';
   font-weight: bold;
   font-size: 50px;
 }
-nav > a{
+.menu_item{
+  font-family: 'Roboto-Regular';
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+  padding: 0 13px;
+}
+.menu_item:last-child{
+  padding-right: 0;
+}
+.main-section{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+}
+.main-content__button{
   font-family: 'Roboto-Regular';
   font-weight: bold;
 }
-main > p, button{
+.main-content__description{
   font-family: 'Roboto-Regular';
   font-weight: bold;
+  padding-right: 37%;
+}
+.image-content__image{
+  padding-top: 5%;
 }
