--- a/font.css
+++ b/font.css
@@ -1,8 +1,24 @@
 @font-face {
-  font-family: 'PTSerif-Regular';
-  src: url('fonts/PTSerif-Regular.ttf');
+    font-family: 'pt_serifbold';
+    src: url('fonts/ptserif-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
-  @font-face{
-  font-family: 'Roboto-Regular';
-  src: url('fonts/Roboto-Regular.ttf');
+@font-face {
+    font-family: 'pt_serifbold_italic';
+    src: url('fonts/ptserif-bolditalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'pt_serifitalic';
+    src: url('fonts/ptserif-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'pt_serifregular';
+    src: url('fonts/ptserif-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
