--- a/style.css
+++ b/style.css
@@ -27,14 +27,14 @@
   font-weight: bold;
   font-size: 50px;
 }
-.menu_item{
+.menu__item{
   font-family: 'Roboto-Regular';
   font-weight: bold;
   text-decoration: none;
   color: black;
   padding: 0 13px;
 }
-.menu_item:last-child{
+.menu__item:last-child{
   padding-right: 0;
 }
 .main-section{
