--- a/font.css
+++ b/font.css
@@ -1,96 +1,18 @@
 @font-face {
     font-family: 'pt_serifbold';
     src: url('fonts/ptserif-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'pt_serifbold_italic';
-    src: url('fonts/ptserif-bolditalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'pt_serifitalic';
-    src: url('fonts/ptserif-italic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'pt_serifregular';
-    src: url('fonts/ptserif-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-Black';
-    src: url('fonts/Roboto-Black.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-BlackItalic';
-    src: url('fonts/Roboto-BlackItalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-Bold';
-    src: url('fonts/Roboto-Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-BoldItalic';
-    src: url('fonts/Roboto-BoldItalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-Italic';
-    src: url('fonts/Roboto-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-Light';
-    src: url('fonts/Roboto-Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-LightItalic';
-    src: url('fonts/Roboto-LightItalic.woff') format('woff');
-    font-weight: normal;
+    font-weight: 700;
     font-style: normal;
 }
 @font-face {
     font-family: 'Roboto-Medium';
     src: url('fonts/Roboto-Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-MediumItalic';
-    src: url('fonts/Roboto-MediumItalic.woff') format('woff');
-    font-weight: normal;
+    font-weight: 500;
     font-style: normal;
 }
 @font-face {
     font-family: 'Roboto-Regular';
     src: url('fonts/Roboto-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-Thin';
-    src: url('fonts/Roboto-Thin.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Roboto-ThinItalic';
-    src: url('fonts/Roboto-ThinItalic.woff') format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 }
