--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: auto;
 }
 .logo{
-  font: bold 24px/31px 'pt_serifbold',arial,helvetica,sans-serif;
+  font:24px/31px 'pt_serifbold',arial,helvetica,sans-serif;
   line-height: 32px;
   padding: 40px 0;
   padding-left: 44px;
@@ -38,14 +38,11 @@ opacity: .7;
 }
 .main-content__title{
   font-family: 'pt_serifbold';
-  font-style: normal;
-  font-weight: bold;
   font-size: 66px;
   line-height: 87px;
 }
 .menu__item{
   font-family: 'Roboto-Medium';
-  font-weight: bold;
   text-decoration: none;
   color: black;
   padding: 0 13px;
@@ -61,14 +58,11 @@ opacity: .7;
 }
 .main-content__button{
   font-family: 'Roboto-Medium';
-  font-weight: 500;
   font-size: 18px;
   line-height: 21px;
 }
 .main-content__description{
   font-family: 'Roboto-Regular';
-  font-style: normal;
-  font-weight: normal;
   font-size: 22px;
   line-height: 26px;
 }
