--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: auto;
 }
 .logo{
-  font:24px/31px 'pt_serifbold',arial,helvetica,sans-serif;
+  font: bold 24px/31px 'pt_serifbold',arial,helvetica,sans-serif;
   line-height: 32px;
   padding: 40px 0;
   padding-left: 44px;
@@ -24,12 +24,11 @@
   border-radius: 50%;
   opacity: .7;
 }
-
 .logo__circle_color_dark-blue{
-background: #0056EC;
-border-radius: 50%;
-opacity: .7;
-}
+  background: #0056EC;
+  border-radius: 50%;
+  opacity: .7;
+  }
 .header{
   padding: 40px 0;
   display:flex;
@@ -41,14 +40,43 @@ opacity: .7;
   font-size: 66px;
   line-height: 87px;
 }
-.menu__item{
-  font-family: 'Roboto-Medium';
+.menu_item{
+  position:relative;
   text-decoration: none;
-  color: black;
-  padding: 0 13px;
+  color: #000000;
+  margin-right: 26px;
+  font: 18px/21px 'Roboto-Medium',arial,helvetica,sans-serif
 }
-.menu__item:last-child{
-  padding-right: 0;
+.menu_item::after{
+  position: absolute;
+  display: block;
+  content:'';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity.5s;
+}
+.menu_item:hover{
+  opacity: .5;
+}
+.menu__item_active::after{
+  position: absolute;
+  display: block;
+  content:'';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity.5s;
+}
+.menu_item:hover::after, .menu__item_active::after{
+  opacity: 1;
+}
+.menu_item:last-child{
+  margin-right: 0;
 }
 .main-section{
   display:flex;
