--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
+*{
+  margin: 0 auto;
+  padding: 0;
+}
 .wrapper{
   width: 80%;
-  margin: auto;
 }
 .logo{
-  font:24px/31px 'pt_serifbold',arial,helvetica,sans-serif;
+  font: bold 45px/31px 'pt_serifbold',arial,helvetica,sans-serif;
   line-height: 32px;
-  padding: 40px 0;
-  padding-left: 44px;
+  padding: 6% 0 6% 6%;
+  letter-spacing: 1px;
+  margin-left: 13%;
   position: relative;
 }
 .logo__circle{
-  width: 28px;
-  height: 28px;
+  width: 55px;
+  height: 55px;
   position: absolute;
   left: 0;
   top: 50%;
@@ -24,48 +28,90 @@
   border-radius: 50%;
   opacity: .7;
 }
-
 .logo__circle_color_dark-blue{
-background: #0056EC;
-border-radius: 50%;
-opacity: .7;
-}
+  background: #0056EC;
+  border-radius: 50%;
+  opacity: .7;
+  }
 .header{
-  padding: 40px 0;
+  margin-bottom: 150px;
   display:flex;
   justify-content: space-between;
   align-items: center;
 }
-.main-content__title{
-  font-family: 'pt_serifbold';
-  font-size: 66px;
-  line-height: 87px;
+.menu{
+  display: flex;
+  padding-top: 47px;
+  padding-left: 26%;
+  margin-left: 100%;
 }
-.menu__item{
-  font-family: 'Roboto-Medium';
+.menu_item{
+  position:relative;
   text-decoration: none;
-  color: black;
-  padding: 0 13px;
+  color: #000000;
+  margin-right: 55px;
+  font: 35px/21px 'Roboto-Medium',arial,helvetica,sans-serif
 }
-.menu__item:last-child{
-  padding-right: 0;
+.menu_item::after{
+  position: absolute;
+  display: block;
+  content:'';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity.5s;
 }
-.main-section{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 15px;
+.menu_item:hover{
+  opacity: .5;
 }
-.main-content__button{
-  font-family: 'Roboto-Medium';
-  font-size: 18px;
-  line-height: 21px;
+.menu__item_active::after{
+  position: absolute;
+  display: block;
+  content:'';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity.5s;
 }
-.main-content__description{
-  font-family: 'Roboto-Regular';
-  font-size: 22px;
-  line-height: 26px;
+.menu_item:hover::after, .menu__item_active::after{
+  opacity: 1;
 }
-.image-content__image{
-  padding-top: 5%;
+.menu_item:last-child{
+  margin-right: 0;
+}
+.main{
+  position:relative;
+  background: no-repeat url('img/mainImg.svg');
+}
+.main__title{
+  font: 135px/175px 'pt_serifbold',arial,helvetica,sans-serif;
+  margin: 27% 0 0 13%;
+}
+.main__title-text_highlight{
+  display: flex;
+  margin-top: 10px;
+  background: #ECF3FF;
+}
+.main__description{
+  margin: 4% 27% 0 13.3%;
+  word-spacing: 7px;
+  font: 42px/53px 'Roboto-Regular',arial,helvetica,sans-serif;
+}
+.main__button{
+  display: inline-block;
+  color: #fff;
+  background: #0056EC;
+  text-decoration: none;
+  border-radius: 4px;
+  margin: 83px 0 0 13%;
+  padding: 51px 81px 51px 43px;
+  font: 35px/16px 'Roboto-Medium',arial,helvetica,sans-serif;
+  transition: opacity .5s;
+}
+.main__button:hover{
+  opacity: .5;
 }
