--- a/style.css
+++ b/style.css
@@ -6,16 +6,15 @@
   width: 80%;
 }
 .logo{
-  font: bold 45px/31px 'pt_serifbold',arial,helvetica,sans-serif;
+  font: bold 25px/31px 'pt_serifbold',arial,helvetica,sans-serif;
   line-height: 32px;
-  padding: 6% 0 6% 6%;
-  letter-spacing: 1px;
-  margin-left: 13%;
+  padding: 40px 48px;
+  margin-right: 59%;
   position: relative;
 }
 .logo__circle{
-  width: 55px;
-  height: 55px;
+  width: 30px;
+  height: 30px;
   position: absolute;
   left: 0;
   top: 50%;
@@ -34,21 +33,20 @@
   opacity: .7;
   }
 .header{
-  margin-bottom: 150px;
+  margin-bottom: 108px;
   display:flex;
   justify-content: space-between;
   align-items: center;
 }
 .menu{
-  display: flex;
-  justify-content: space-between;
+display: flex;
 }
 .menu_item{
   position:relative;
   text-decoration: none;
   color: #000000;
-  margin-right: 26px;
-  font: 35px/21px 'Roboto-Medium',arial,helvetica,sans-serif
+  margin-right: 24px;
+  font: 19px/21px 'Roboto-Medium',arial,helvetica,sans-serif
 }
 .menu_item::after{
   position: absolute;
@@ -83,23 +81,21 @@
 }
 .main{
   position:relative;
-  background: top right no-repeat url('img/mainImg.svg');
-  padding-right: 63%;
+  background: center right no-repeat url('img/mainImg.svg');
+  padding: 100px 63% 150px 0;
 }
 .main__title{
-  font: 135px/175px 'pt_serifbold',arial,helvetica,sans-serif;
-  margin: 27% 0 0 13%;
-  padding-right: 10%;
+  font: 66px/80px 'pt_serifbold',arial,helvetica,sans-serif;
 }
 .main__title-text_highlight{
   display: flex;
-  margin-top: 10px;
+  margin-top: 2px;
+  line-height: 90px;
   background: #ECF3FF;
 }
 .main__description{
-  margin: 4% 27% 0 13.3%;
-  word-spacing: 7px;
-  font: 42px/53px 'Roboto-Regular',arial,helvetica,sans-serif;
+  margin: 30px 75px 35px 0;
+  font: 24px/29px 'Roboto-Regular',arial,helvetica,sans-serif;
 }
 .main__button{
   display: inline-block;
@@ -107,9 +103,8 @@
   background: #0056EC;
   text-decoration: none;
   border-radius: 4px;
-  margin: 83px 0 0 13%;
-  padding: 51px 81px 51px 43px;
-  font: 35px/16px 'Roboto-Medium',arial,helvetica,sans-serif;
+  padding: 20px;
+  font: 20px/16px 'Roboto-Medium',arial,helvetica,sans-serif;
   transition: opacity .5s;
 }
 .main__button:hover{
